manifests/applications/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: argocd
    kubernetes.io/metadata.name: argocd
    pod-security.kubernetes.io/enforce: privileged
  name: argocd
