manifests/applications/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.toot.community
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argocd.toot.community
      secretName: argocd-server-tls
